--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,11 @@
 @use "./base.scss";
 
 // put your custom CSS here!
+.flex-container {
+    display: flex;
+  }
+
+.flex-container > div {
+    margin: 10px;
+    padding: 15px;
+}
